[package]
name = "slopq4-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slopq4"
path = "src/main.rs"

[dependencies]
slopq4             = { path = "../slopq4" }
clap               = { version = "4", features = ["derive"] }
tokio              = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
