[package]
name = "slopq4"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["gzip"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml       = "0.8"
flate2     = "1"
ipnet      = { version = "2", features = ["serde"] }
thiserror  = "2"
tracing    = "0.1"
futures    = "0.3"

[dev-dependencies]
tokio      = { version = "1", features = ["full", "test-util"] }
mockito    = "1"
tempfile   = "3"
